--- a/NEWS
+++ b/NEWS
@@ -4,6 +4,9 @@ See the end for copying conditions.
 
 * Version 3.0.1 (unreleased)
 
+** libgnutls: Do not allow second instances of PKCS #11
+modules.
+
 ** libgnutls: fixed alignment issue in AES-NI code.
 
 ** libgnutls: The config file at gnutls_pkcs11_init()
