--- a/doc/cha-gtls-app.texi
+++ b/doc/cha-gtls-app.texi
@@ -1,7 +1,8 @@
 @node How to use GnuTLS in applications
 @chapter How to use @acronym{GnuTLS} in applications
 @anchor{examples}
-@cindex Example programs
+@cindex example programs
+@cindex examples
 
 @menu
 * Preparation::
@@ -653,8 +654,8 @@ information about it.
 
 @node Parameter generation
 @subsection Parameter generation
-@cindex Parameter generation
-@cindex Generating parameters
+@cindex parameter generation
+@cindex generating parameters
 
 Several TLS ciphersuites require additional parameters that
 need to be generated or provided by the application. The
@@ -695,8 +696,8 @@ an alternative interface is available using a callback function.
 
 @node Keying Material Exporters
 @subsection Keying material exporters
-@cindex Keying material exporters
-@cindex Exporting keying material
+@cindex keying material exporters
+@cindex exporting keying material
 
 The TLS PRF can be used by other protocols to derive data.  The API to
 use is @funcref{gnutls_prf}.  The function needs to be provided with the
@@ -721,7 +722,7 @@ low-level TLS PRF interface called @funcref{gnutls_prf_raw}.
 
 @node Channel Bindings
 @subsection Channel bindings
-@cindex Channel bindings
+@cindex channel bindings
 
 In user authentication protocols (e.g., EAP or SASL mechanisms) it is
 useful to have a unique string that identifies the secure channel that
@@ -799,7 +800,7 @@ to the random number generation.
 
 @node Symmetric cryptography
 @subsection Symmetric cryptography
-@cindex Symmetric cryptography
+@cindex symmetric cryptography
 
 The available functions to access symmetric crypto algorithms operations
 are shown below. The supported algorithms are the algorithms required by the TLS protocol.
@@ -814,7 +815,7 @@ functions are provided to set the associated data and retrieve the authenticatio
 
 @node Hash and HMAC functions
 @subsection Hash and HMAC functions
-@cindex Hash functions
+@cindex hash functions
 @cindex HMAC functions
 
 The available operations to access hash functions and hash-MAC (HMAC) algorithms
@@ -829,7 +830,7 @@ are the same as the HMAC algorithms.
 
 @node Random number generation
 @subsection Random number generation
-@cindex Random numbers
+@cindex random numbers
 
 Access to the random number generator is provided using the @funcref{gnutls_rnd}
 function.
